[package]
name = "csh128-final-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tectonic = "0.12.0"
tectonic_bundles = "0.3.0"
tectonic_geturl = "0.3.1"
tectonic_status_base = "0.2.0"
tectonic_io_base = "0.4.0"
